/request-password" endpoint: changing type of ResponseEntity: from <String> to <Map<String, String>> so that response is in json format